RESOLVED FIXED320520
AdaptiveStringSearcher good-suffix shift table is one element too small
https://bugs.webkit.org/show_bug.cgi?id=320520
Summary AdaptiveStringSearcher good-suffix shift table is one element too small
Chris Dumez
Reported 2026-07-28 19:59:59 PDT
AdaptiveStringSearcher good-suffix shift table is one element too small
Attachments
Chris Dumez
Comment 1 2026-07-28 20:04:37 PDT
EWS
Comment 2 2026-07-29 16:40:26 PDT
Committed 318198@main (5590f2e70615): <https://commits.webkit.org/318198@main> Reviewed commits have been landed. Closing PR #70406 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-07-29 16:41:13 PDT
EWS
Comment 4 2026-08-03 18:16:50 PDT
Committed 316606.280@safari-7625-branch (ade21d026794): <https://commits.webkit.org/316606.280@safari-7625-branch> Reviewed commits have been landed. Closing PR #6181 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.